--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^28.1.3"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,9 +20,8 @@
     "url": "https://github.com/Register-Grant/Challenge-8-Team-Profile-Generator/issues"
   },
   "homepage": "https://github.com/Register-Grant/Challenge-8-Team-Profile-Generator#readme",
-
   "dependencies": {
     "inquirer": "^8.2.4",
-    "jest": "^28.1.2"
+    "jest": "^28.1.3"
   }
 }
